Added Transaction functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
   <body class="container">
   <%= render 'shared/navbar' %>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <p style="color: green"><%= notice %></p>
+  <p style="color: red"><%= alert %></p>
   <%= yield %>
   </body>
 </html>
