--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,11 +4,13 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <%= link_to 'Accounts', accounts_my_accounts_url, class: 'nav-link' %>
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          <%= link_to 'Sign Out', destroy_user_session_path, class: 'nav-link' %>
         </li>
       <% else %>
         <li class="nav-item">
