Added unit test

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -7,5 +7,5 @@
   </div>
 </div>
 </br>
-<h2> Recent Debits</h2>
-<%= render 'transactions/transaction', transactions: @account.transactions %>
+<h2> Recent Transactions</h2>
+<%= render 'transactions/transaction', transactions: @transactions %>
