--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <%= link_to 'Accounts', accounts_my_accounts_url, class: 'nav-link' %>
+  <%= link_to 'Accounts', accounts_my_accounts_path, class: 'nav-link' %>
+  <%= link_to 'Properties', properties_path, class: 'nav-link' %>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
